# fxharry

./: PIPELINE_FIXES.md  README.md  REFACTORING_SUMMARY.md  docker-compose.yml  index.html  package-lock.json  requirements.txt  setup.py
ai_core/: __init__.py  grpc_server.py  main.py  requirements.txt
ai_core/api/: __init__.py
ai_core/backtesting/: engine.py
ai_core/core/: __init__.py  config.py  loader.py  logger.py  utils.py
ai_core/database/: __init__.py  database.py
ai_core/genai/: __init__.py  decision_layer.py  embeddings.py  finbert_model.py  llm_agent.py  mcp_agent.py  news_analyzer.py  news_collector.py  planner.py  sentiment.py  summarizer.py
ai_core/ml_engine/: __init__.py
ai_core/risk_manager/: __init__.py  risk_manager.py
ai_core/strategy_engine/: __init__.py  ml_models.py  rule_based.py
archive/server/: .env.example
backend/: .env.example  Dockerfile  __init__.py  main.py
backend/ai_models/: __init__.py
backend/api/: __init__.py
backend/core/: __init__.py  config.py  logger.py  utils.py
backend/database/: __init__.py  database.py  models.py
cpp_engine/: CMakeLists.txt  README.md
cpp_engine/execution/: order_executor.cpp
cpp_engine/simulation/: market_simulator.cpp
frontend/: package-lock.json  package.json
genai_agent/: decision_layer.py  llm_brain.py  news_analyzer.py
ibkr_streaming/: candle_engine.py  config.py  ibkr_client.py  logger.py  microstructure.py  run.py  symbols.py  tick_stream.py  ws_push.py
ml_pipeline/: __init__.py
node_gateway/: package-lock.json  package.json
tests/: __init__.py
(+126 files in other folders)
